<resources>
    <string name="app_name">Match</string>
    <string name="google_api_key">AIzaSyA8SQnBoNts5HaBHUW0EiaAYqg0qrWe358</string>

    <!-- Login -->
    <string name="link_signup">¿Aún no estás registrado?</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="loading_dialog_text">Cargando...</string>
    <string name="signup">Registrate</string>

    <!-- Chat -->
    <string name="app_chat">Chat</string>

    <string name="matching_app">Matching App</string>

    <!-- Datos cuenta -->
    <string name="name_label">Nombre</string>
    <string name="crear_usuario_label">Crear usuario</string>
    <string name="ya_tenes_usuario_link">¿Ya tenes un usuario? Inicia Sesión</string>

    <string name="title_activity_home">Inicio</string>
    <string name="item_perfil">Perfil</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="configuracion">Configuración</string>

    <string name="openDrawer">Abrir Menu</string>
    <string name="closeDrawer">Cerrar Menu</string>

    <string name="ERROR_NO_CONECTIVIDAD_MENSAJE">Asegúrate que estas conectado a un red WI-FI o a la red de tu celular e intenta de nuevo.</string>
    <string name="link_forget_password">¿Olvidaste la contraseña?</string>

    <string name="title_activity_sign_up_user_info">Datos Personales</string>
    <string name="title_activity_sign_up_account_info">Nuevo Usuario</string>
    <string name="error_activity_sign_up">Hay un error en los datos</string>
    <string name="title_activity_chat_lobby">Chats</string>

    <string name="address">Domicilio</string>
    <string name="sign_up">Registrar</string>

    <string name="error_connection_google_api">No se puede resolver la dirección, chequee su conectividad.</string>
    <string name="error_address_sign_up">Ingrese una dirección valida</string>
    <string name="error_user_name">Ingrese un nombre de al menos %1$s letras.</string>
    <string name="error_mail">Ingrese un correo válido.</string>
    <string name="error_password">Debe estar entre %1$s y %2$s caracteres</string>
    <string name="creating_user">Creando usuario ...</string>

    <string name="usuario_ya_registrado">El mail %1$s ya esta registrado con otro usuario</string>
    <string name="foto">Foto</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="subir_foto">Necesitamos una linda foto tuya!</string>
    <string name="saving_user_info">Registrando datos de usuario ...</string>
    <string name="usuario_no_registrado">El usuario %1$s no existe</string>
    <string name="intereses">Intereses</string>

    <string name="seleccionar_categoria">Selecciona una categoria</string>
    <string name="seleccionar_interes">Selecciona un interes</string>
    <string name="categoria">Categoria</string>
    <string name="valor">Valor</string>
    <string name="agregar">Agregar</string>
    <string name="no_data_available">No hay candidatos para mostrar.</string>
    <string name="no_chat_available">No hay chats para mostrar.</string>

    <string name="informacion_basica">Información básica</string>
    <string name="sexo">Sexo</string>
    <string name="Masculino">Masculino</string>
    <string name="Femenino">Femenino</string>
    <string name="radio_group_error">Debes seleccionar alguna opción</string>
    <string name="candidate_match_title">¡Hubo un Match!</string>
    <string name="candidate_match_message">%1$s tambien quiere conocerte.</string>
    <string name="aceptar">Aceptar</string>
    <string name="chat">Chat</string>
    <string name="entidad_no_existente">No se encuentra la entidad</string>
    <string name="entidad_existe">La entidad ya existe</string>
    <string name="usuario_no_existe">El usuario no existe</string>
    <string name="password_invalido">Password incorrecto.</string>
    <string name="password_invalido_server">El password es incorrecto.</string>
    <string name="age">Edad</string>
    <string name="age_error">Debe estar entre 18 y 100 años</string>
    <string name="title_activity_match_candidates">MatchCandidatesActivity</string>
    <string name="usuario_existente">El usuario %1$s ya existe.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="session_expired_message">La sesion ha expirado\nIngrese nuevamente.</string>
    <string name="session_expired_title">Sesion Expirada</string>
    <string name="update_profile">Actualizar</string>
    <string name="updating_profile_info">Actualizando datos de usuario ...</string>
    <string name="send">Enviar</string>
    <string name="message_hint">Escribe un mensaje</string>
</resources>
