<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.match.activity.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="112dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/matches_logo_pink"
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal" />

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView android:id="@+id/btn_signup"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/signup"
                android:textAllCaps="true"
                android:textColor="@color/ColorPrimary"
                android:padding="12dp"
                android:gravity="center"
                android:textStyle="normal"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_drawable"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:padding="12dp"
                android:textStyle="normal"/>

        </LinearLayout>

        <TextView android:id="@+id/link_forget_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/link_forget_password"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>


</RelativeLayout>