<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/informacion_basica"
                android:textColor="@color/ColorPrimary" />

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/user_info" />
        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/lbSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="5px"
                android:text="@string/sexo"
                android:textColor="@color/ColorPrimary"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radioGroupUserSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdMacho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Masculino" />

                <RadioButton
                    android:id="@+id/rdHembra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Femenino" />
            </RadioGroup>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <AutoCompleteTextView
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>