<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/intereses"
                android:textColor="@color/ColorPrimary" />

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/like" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/categoria"
                android:textColor="@color/ColorPrimary" />

            <Spinner
                android:id="@+id/spCategory"
                style="@style/Base.Widget.AppCompat.TextView.SpinnerItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="3"
                android:prompt="@string/seleccionar_categoria" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/valor"
                android:textColor="@color/ColorPrimary" />

            <Spinner
                android:id="@+id/spValue"
                style="@style/Base.Widget.AppCompat.TextView.SpinnerItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="3"
                android:prompt="@string/seleccionar_interes"></Spinner>

        </LinearLayout>

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/interestList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

            </ListView>

        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="24dp"
            android:elevation="@dimen/elevation"
            android:onClick="addInterest"
            android:src="@drawable/ic_action_add" />


    </LinearLayout>
</android.support.v7.widget.CardView>